--- a/admin/css/page.css
+++ b/admin/css/page.css
@@ -429,3 +429,37 @@ form .action-buttons #discard {
   font-size: 20px;
   font-weight: 600;
 }
+
+.loader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background: rgba(0, 255, 34, 0.286);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  font-size: 20px;
+}
+
+.loader .fas {
+  font-size: 30px;
+  margin-bottom: 20px;
+  font-weight: 800;
+  color: var(--primary);
+  animation: animate 1s linear forwards infinite;
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
