--- a/admin/css/page.css
+++ b/admin/css/page.css
@@ -444,6 +444,14 @@ form .action-buttons #discard {
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   font-size: 20px;
+  pointer-events: none;
+  opacity: 0;
+  transition: 0.5s all;
+}
+
+.loader.active {
+  opacity: 1;
+  pointer-events: all;
 }
 
 .loader .fas {
